--- a/Memoria.tex
+++ b/Memoria.tex
@@ -2,7 +2,12 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel} % espanol
-%\usepackage[latin1]{inputenc} % acentos sin codigo
+\usepackage{multirow} % Para las tablas
+
+\usepackage{graphicx}%para imagenes
+\graphicspath{ {img/} }
+
+
 \usepackage{enumerate} % enumerados
 \usepackage{listings}
 \usepackage{color}
