--- a/Memoria.tex
+++ b/Memoria.tex
@@ -7,6 +7,8 @@
 \usepackage{graphicx}%para imagenes
 \graphicspath{ {img/} }
 
+\usepackage{varwidth} % cajas
+
 
 \usepackage{enumerate} % enumerados
 \usepackage{listings}
